--- a/styles/home_page.css
+++ b/styles/home_page.css
@@ -15,6 +15,8 @@ header {
     justify-content: space-between;
     padding-bottom: 20px;
     border-bottom: 1px solid black;
+    width: 100%;
+    height: 20%;
 }
 
 .main-logo {
@@ -48,12 +50,14 @@ button {
     margin-bottom: 30px;
 }
 
-ul {
-    list-style-type: none;
+.sidebar {
     width: 30%;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin-left: 30px;
+}
+
+ul {
+    list-style-type: none;
 }
 
 li a {
@@ -75,9 +79,11 @@ li a:hover:not(.active) {
 main {
     position: absolute;
     left: 40%;
-    top: 130px;
+    top: 100px;
     border-left: 1px solid black;
-    padding-left: 100px
+    border-right: 1px solid black;
+    margin: auto;
+    padding: 47px 100px;
 }
 
 footer {
@@ -85,8 +91,33 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 10%;
     text-align: center;
     border-top: 1px solid black;
     padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.statics-title {
+    display: flex;
+    gap: 10px;
+    font-weight: bold;
+}
+
+.statics {
+    width: 300px;
+}
+
+.statics p {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+    padding-left: 30px;
 }
