--- a/styles/course_page.css
+++ b/styles/course_page.css
@@ -16,7 +16,7 @@ header {
     margin-top: 20px;
 }
 
-h1 {
+.uppercase {
     text-transform: uppercase;
 }
 
@@ -31,6 +31,8 @@ header button {
     margin-right: 10px;
     width: 100px;
     padding: 3px;
+    font-size: 14px;
+    cursor: pointer;
 }
 
 .main-logo {
@@ -45,8 +47,8 @@ header button {
 
 .navbar {
     width: 40%;
-    max-width: 300px;
     padding: 20px;
+    max-width: 300px;
 }
 
 .main-content {
@@ -57,7 +59,7 @@ header button {
     width: 70%;
 }
 
-nav > ul {
+nav>ul {
     display: flex;
     flex-direction: column;
     list-style-type: none;
@@ -72,11 +74,11 @@ li:hover:not(.active) {
     background-color: rgb(54, 161, 161);
 }
 
-li > p {
+li>p {
     display: inline-block;
 }
 
-li > a {
+li>a {
     text-decoration: none;
     margin-left: 5px;
 }
@@ -90,19 +92,80 @@ footer {
     margin: 30px auto;
 }
 
-.title {
+.pagination {
     display: flex;
-    font-weight: bold;
-    gap: 5px;
+    justify-content: end;
+    margin-top: 10px;
 }
 
-.title i {
-    width: 20px;
-    align-content: center;
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
 }
 
-.statics-content p {
+.pagination a.pag-active {
+    background-color: orange;
+    color: black;
+}
+
+.pagination a:hover:not(.pag-active) {
+    background-color: #ddd;
+}
+
+.button {
+    padding: 4px 12px;
+    line-height: 30px;
+    border-radius: 4px;
+    color: #000;
+    cursor: pointer;
+}
+
+.button-edit {
+    background-color: aqua;
+}
+
+.button-delete {
+    background-color: red;
+}
+
+.main-content h2 {
+    text-align: center;
+    margin: 10px auto;
+    font-size: 24px;
+}
+
+.course-table, .course-table tr, .course-table th, .course-table td  {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 3px;
+}
+
+.add-btn, .search-btn {
+    font-size: 14px;
+    padding: 3px;
+    width: 100px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.search-bar {
+    font-size: 14px;
+    padding: 3px;
+    width: 250px;
+}
+
+.sort select {
+    padding: 3px;
+    font-size: 14px;
+}
+
+.search-menu {
     display: flex;
     justify-content: space-between;
-    margin-left: 25px;
+}
+
+.course-table {
+    width: 100%;
 }
