--- a/styles/course_page_3.css
+++ b/styles/course_page_3.css
@@ -16,7 +16,7 @@ header {
     margin-top: 20px;
 }
 
-h1 {
+.uppercase {
     text-transform: uppercase;
 }
 
@@ -31,6 +31,8 @@ header button {
     margin-right: 10px;
     width: 100px;
     padding: 3px;
+    font-size: 14px;
+    cursor: pointer;
 }
 
 .main-logo {
@@ -45,8 +47,8 @@ header button {
 
 .navbar {
     width: 40%;
-    max-width: 300px;
     padding: 20px;
+    max-width: 300px;
 }
 
 .main-content {
@@ -57,7 +59,7 @@ header button {
     width: 70%;
 }
 
-nav > ul {
+nav>ul {
     display: flex;
     flex-direction: column;
     list-style-type: none;
@@ -72,11 +74,11 @@ li:hover:not(.active) {
     background-color: rgb(54, 161, 161);
 }
 
-li > p {
+li>p {
     display: inline-block;
 }
 
-li > a {
+li>a {
     text-decoration: none;
     margin-left: 5px;
 }
@@ -90,19 +92,50 @@ footer {
     margin: 30px auto;
 }
 
-.title {
-    display: flex;
-    font-weight: bold;
-    gap: 5px;
+.button {
+    padding: 3px;
+    width: 100px;
+    border: 1px solid #888;
+    border-radius: 3px;
+    color: #000;
+    cursor: pointer;
+    margin: 5px;
 }
 
-.title i {
-    width: 20px;
-    align-content: center;
+.main-content h2 {
+    text-align: center;
+    margin: 10px auto;
+    font-size: 24px;
 }
 
-.statics-content p {
+.modal {
+    width: 100%;
+    height: 80%;
+    border: 1px solid #888;
+    padding: 20px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.modal p {
     display: flex;
     justify-content: space-between;
-    margin-left: 25px;
+    font-weight: bold;
+}
+
+.modal p span {
+    border: 1px solid #888;
+    width: 50px;
+    text-align: center;
+    background-color: #e9e4e4;
+}
+
+.submit-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
