--- a/styles/class_page.css
+++ b/styles/class_page.css
@@ -92,14 +92,42 @@ footer {
     margin: 30px auto;
 }
 
+.pagination {
+    display: flex;
+    justify-content: end;
+    margin-top: 10px;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.pagination a.pag-active {
+    background-color: orange;
+    color: black;
+}
+
+.pagination a:hover:not(.pag-active) {
+    background-color: #ddd;
+}
+
 .button {
-    padding: 3px;
-    width: 100px;
-    border: 1px solid #888;
-    border-radius: 3px;
+    padding: 4px 12px;
+    line-height: 30px;
+    border-radius: 4px;
     color: #000;
     cursor: pointer;
-    margin: 5px;
+}
+
+.button-edit {
+    background-color: aqua;
+}
+
+.button-delete {
+    background-color: red;
 }
 
 .main-content h2 {
@@ -108,62 +136,36 @@ footer {
     font-size: 24px;
 }
 
-.modal {
-    width: 100%;
-    height: 80%;
-    border: 1px solid #888;
-    padding: 20px;
+.course-table, .course-table tr, .course-table th, .course-table td  {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 3px;
 }
 
-.edit-form {
-    background-color: #fefefe;
-    width: 100%;
-    margin-top: 10px;
+.add-btn, .search-btn {
+    font-size: 14px;
+    padding: 3px;
+    width: 100px;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
-.modal p {
+.search-bar {
+    font-size: 14px;
+    padding: 3px;
+    width: 250px;
+}
+
+.sort select {
+    padding: 3px;
+    font-size: 14px;
+}
+
+.search-menu {
     display: flex;
     justify-content: space-between;
-    font-weight: bold;
 }
 
-.modal p span {
-    border: 1px solid #888;
-    width: 50px;
-    text-align: center;
-    background-color: #e9e4e4;
-}
-
-.edit-form label,
-.edit-form input {
-    display: inline-block;
-}
-
-.edit-form input {
-    font-size: 16px;
-    width: 60%;
-    margin-top: 20px;
-    text-align: left;
-}
-
-.edit-form label {
-    width: 15%;
-}
-
-.course-status {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    align-self: center;
-}
-
-.submit-btn {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
-.red-color {
-    color: red;
+.course-table {
+    width: 100%;
 }
