--- a/styles/class_page_1.css
+++ b/styles/class_page_1.css
@@ -108,53 +108,53 @@ footer {
     font-size: 24px;
 }
 
-.modal {
+.add-modal {
     width: 100%;
     height: 80%;
     border: 1px solid #888;
     padding: 20px;
 }
 
-.edit-form {
+.modal-content {
     background-color: #fefefe;
     width: 100%;
     margin-top: 10px;
 }
 
-.modal p {
+.add-modal p {
     display: flex;
     justify-content: space-between;
     font-weight: bold;
 }
 
-.modal p span {
+.add-modal p span {
     border: 1px solid #888;
     width: 50px;
     text-align: center;
     background-color: #e9e4e4;
 }
 
-.edit-form label,
-.edit-form input {
-    display: inline-block;
+form label {
+    display: block;
 }
 
-.edit-form input {
+form label input {
     font-size: 16px;
-    width: 60%;
+}
+
+#class-name,
+#class-id,
+#class-teacher,
+#class-number,
+#class-description {
+    width: 80%;
     margin-top: 20px;
-    text-align: left;
+    margin-left: 20px;
 }
 
-.edit-form label {
-    width: 15%;
-}
-
-.course-status {
+.class-status {
     display: flex;
-    justify-content: space-between;
     margin-top: 20px;
-    align-self: center;
 }
 
 .submit-btn {
