--- a/src/styles/course_page.css
+++ b/src/styles/course_page.css
@@ -1,171 +1,245 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
-    width: 100%;
-    height: 100px;
-    /* background-color: brown; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid black;
-    margin-top: 20px;
+  width: 100%;
+  height: 100px;
+  /* background-color: brown; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  margin-top: 20px;
 }
 
 .uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 header div {
-    align-self: self-start;
-    margin-left: 10px;
+  align-self: self-start;
+  margin-left: 10px;
 }
 
 header button {
-    align-self: last baseline;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    width: 100px;
-    padding: 3px;
-    font-size: 14px;
-    cursor: pointer;
+  align-self: last baseline;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  width: 100px;
+  padding: 3px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .main-logo {
-    width: 200px;
+  width: 200px;
 }
 
 .container {
-    display: flex;
-    border-bottom: 1px solid black;
-    justify-content: space-between;
+  display: flex;
+  border-bottom: 1px solid black;
+  justify-content: space-between;
 }
 
 .navbar {
-    width: 40%;
-    padding: 20px;
-    max-width: 300px;
+  width: 40%;
+  padding: 20px;
+  max-width: 300px;
 }
 
 .main-content {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    padding: 20px 100px;
-    margin-right: 50px;
-    width: 70%;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding: 20px 100px;
+  margin-right: 50px;
+  width: 70%;
 }
 
-nav>ul {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
+nav > ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
 }
 
 li {
-    background-color: aquamarine;
-    height: 30px;
+  background-color: aquamarine;
+  height: 30px;
 }
 
 li:hover:not(.active) {
-    background-color: rgb(54, 161, 161);
+  background-color: rgb(54, 161, 161);
 }
 
-li>p {
-    display: inline-block;
+li > p {
+  display: inline-block;
 }
 
-li>a {
-    text-decoration: none;
-    margin-left: 5px;
+li > a {
+  text-decoration: none;
+  margin-left: 5px;
 }
 
 .active {
-    background-color: orange;
+  background-color: orange;
 }
 
 footer {
-    text-align: center;
-    margin: 30px auto;
+  text-align: center;
+  margin: 30px auto;
 }
 
 .pagination {
-    display: flex;
-    justify-content: end;
-    margin-top: 10px;
+  display: flex;
+  justify-content: end;
+  margin-top: 10px;
 }
 
 .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
 .pagination a.pag-active {
-    background-color: orange;
-    color: black;
+  background-color: orange;
+  color: black;
 }
 
 .pagination a:hover:not(.pag-active) {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 .button {
-    padding: 4px 12px;
-    line-height: 30px;
-    border-radius: 4px;
-    color: #000;
-    cursor: pointer;
+  border: 1px solid #888;
+  width: 100px;
+  padding: 4px 12px;
+  border-radius: 4px;
+  color: #000;
+  cursor: pointer;
 }
 
 .button-edit {
-    background-color: aqua;
+  background-color: aqua;
 }
 
 .button-delete {
-    background-color: red;
+  background-color: red;
 }
 
 .main-content h2 {
-    text-align: center;
-    margin: 10px auto;
-    font-size: 24px;
+  text-align: center;
+  margin: 10px auto;
+  font-size: 24px;
 }
 
-.course-table, .course-table tr, .course-table th, .course-table td  {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 3px;
+.course-table,
+.course-table tr,
+.course-table th,
+.course-table td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 3px;
 }
 
-.add-btn, .search-btn {
-    font-size: 14px;
-    padding: 3px;
-    width: 100px;
-    margin-bottom: 10px;
-    cursor: pointer;
+.add-btn,
+.search-btn {
+  font-size: 14px;
+  padding: 3px;
+  width: 100px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .search-bar {
-    font-size: 14px;
-    padding: 3px;
-    width: 250px;
+  font-size: 14px;
+  padding: 3px;
+  width: 250px;
 }
 
 .sort select {
-    padding: 3px;
-    font-size: 14px;
+  padding: 3px;
+  font-size: 14px;
 }
 
 .search-menu {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .course-table {
+  width: 100%;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10px auto;
+  width: 80%;
+}
+
+.modal p {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.close {
+  border: 1px solid #888;
+  width: 50px;
+  text-align: center;
+  background-color: #e9e4e4;
+}
+
+.close:hover {
+    background-color: #888;
+    cursor: pointer;
+}
+
+.add-form label, .add-form input {
+  display: inline-block;
+}
+
+.add-form label {
+    width: 25%;
+}
+
+.add-form input {
+    font-size: 16px;
+    margin-top: 20px;
+    width: 70%;
+    text-align: left;
+}
+
+.course-status {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  align-self: center;
+}
+
+.submit-btn {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.red-color {
+  color: red;
+}
+
+.overlay {
+    z-index: 1;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 100%;
+    border: 1px solid #888;
 }
