--- a/src/styles/course_page.css
+++ b/src/styles/course_page.css
@@ -116,8 +116,7 @@ footer {
 
 .button {
   border: 1px solid #888;
-  width: 100px;
-  padding: 4px 12px;
+  padding: 3px 10px;
   border-radius: 4px;
   color: #000;
   cursor: pointer;
@@ -184,6 +183,10 @@ footer {
 .modal p {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
+}
+
+.bold {
   font-weight: bold;
 }
 
@@ -234,12 +237,15 @@ footer {
 }
 
 .overlay {
+    position: fixed;
+    top: 22%;
+    left: 30%;
     z-index: 1;
     background-color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 62%;
     border: 1px solid #888;
+    display: none;
 }
