--- a/src/styles/course_page.css
+++ b/src/styles/course_page.css
@@ -116,7 +116,7 @@ footer {
 
 .button {
   border: 1px solid #888;
-  padding: 3px 10px;
+  padding: 2px 8px;
   border-radius: 4px;
   color: #000;
   cursor: pointer;
@@ -176,7 +176,7 @@ footer {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 10px auto;
+  margin: 10% auto;
   width: 80%;
 }
 
@@ -245,7 +245,7 @@ footer {
     display: flex;
     align-items: center;
     width: 60%;
-    height: 62%;
+    height: 63%;
     border: 1px solid #888;
     display: none;
 }
