--- a/src/styles/account_page.css
+++ b/src/styles/account_page.css
@@ -115,11 +115,11 @@ footer {
 }
 
 .button {
-    padding: 4px 12px;
-    line-height: 30px;
+    padding: 3px 8px;
     border-radius: 4px;
     color: #000;
     cursor: pointer;
+    border: 1px solid #888;
 }
 
 .button-edit {
@@ -136,7 +136,7 @@ footer {
     font-size: 24px;
 }
 
-.course-table, .course-table tr, .course-table th, .course-table td  {
+.account-table, .account-table tr, .account-table th, .account-table td  {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 3px;
@@ -153,7 +153,7 @@ footer {
 .search-bar {
     font-size: 14px;
     padding: 3px;
-    width: 250px;
+    width: 200px;
 }
 
 .sort select {
@@ -166,6 +166,20 @@ footer {
     justify-content: space-between;
 }
 
-.course-table {
+.account-table {
     width: 100%;
 }
+
+.overlay {
+    position: fixed;
+    top: 22%;
+    left: 30%;
+    z-index: 1;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    width: 60%;
+    height: 73%;
+    border: 1px solid #888;
+    display: none;
+  }
