--- a/src/styles/account_page.css
+++ b/src/styles/account_page.css
@@ -142,7 +142,7 @@ footer {
     padding: 3px;
 }
 
-.add-btn, .search-btn {
+.search-btn {
     font-size: 14px;
     padding: 3px;
     width: 100px;
