--- a/src/styles/student_page.css
+++ b/src/styles/student_page.css
@@ -220,9 +220,9 @@ footer {
 
 .gender {
   display: flex;
-  justify-content: space-between;
   margin-top: 20px;
-  align-self: center;
+  align-items: center;
+  gap: 20%;
 }
 
 .submit-btn {
@@ -239,14 +239,14 @@ footer {
 
 .overlay {
   position: fixed;
-  top: 22%;
+  top: 20%;
   left: 30%;
   z-index: 1;
   background-color: white;
   display: flex;
   align-items: center;
   width: 60%;
-  height: 73%;
+  height: 67%;
   border: 1px solid #888;
   display: none;
 }
