--- a/src/styles/course_page.css
+++ b/src/styles/course_page.css
@@ -98,20 +98,11 @@ footer {
   margin-top: 10px;
 }
 
-.pagination a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-.pagination a.pag-active {
-  background-color: orange;
-  color: black;
-}
-
-.pagination a:hover:not(.pag-active) {
-  background-color: #ddd;
+.page-number {
+  padding: 5px 10px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
 }
 
 .button {
